--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -250,9 +250,32 @@ jobs:
                       - ./gateway-docker-context
 
     test:
+        docker:
+            - image: cimg/openjdk:11.0
+        resource_class: large
+        steps:
+            - checkout
+            - attach_workspace:
+                  at: .
+            - restore-maven-cache
+            - run:
+                  name: Run tests
+                  command: |
+                      mvn -pl 'gravitee-apim-distribution, gravitee-apim-rest-api, gravitee-apim-gateway' -amd --fail-fast -s .gravitee-snapshot.settings.xml test --no-transfer-progress -Dskip.validation=true -T 2C
+            - run:
+                  name: Save test results
+                  command: |
+                      mkdir -p ~/test-results/junit/
+                      find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+                  when: always
+            - notify-on-failure
+            - store_test_results:
+                  path: ~/test-results
+
+    test-repository:
         machine:
             image: ubuntu-2004:202107-02
-        resource_class: xlarge
+        resource_class: large
         steps:
             - checkout
             - attach_workspace:
@@ -262,7 +285,8 @@ jobs:
                   name: Run tests
                   command: |
                       # Need to use `package` phase to get repo-test's jar build and shared to mongodb and jdbc repos
-                      mvn -pl '!gravitee-apim-console-webui, !gravitee-apim-portal-webui' -s .gravitee-snapshot.settings.xml package --no-transfer-progress -Dskip.validation=true -T 2C
+                      cd gravitee-apim-repository
+                      mvn -s ../.gravitee-snapshot.settings.xml package --no-transfer-progress -Dskip.validation=true -T 2C
             - run:
                   name: Save test results
                   command: |
@@ -947,6 +971,9 @@ workflows:
             - test:
                   requires:
                       - build
+            - test-repository:
+                    requires:
+                        - build
             - sonarcloud-analysis:
                   name: Sonar - << matrix.working_directory >>
                   matrix:
@@ -958,6 +985,7 @@ workflows:
                   context: cicd-orchestrator
                   requires:
                       - test
+                      - test-repository
             - publish-on-artifactory:
                   filters:
                       branches:
@@ -967,6 +995,7 @@ workflows:
                               - fix-nexus-pb
                   requires:
                       - test
+                      - test-repository
             - publish-on-nexus:
                   filters:
                       branches:
@@ -976,10 +1005,12 @@ workflows:
                               - fix-nexus-pb
                   requires:
                       - test
+                      - test-repository
             - publish-images-azure-registry:
                   context: cicd-orchestrator
                   requires:
                       - test
+                      - test-repository
                   pre-steps:
                       - secrethub/env-export:
                             secret-path: graviteeio/cicd/azure/docker-registries/graviteeio/username
